# diffy

./: CHANGELOG.md  Cargo.toml  Makefile  README.md  crates.js  deny.toml  help.html  scrape-examples-help.html  search-index.js  settings.html  src-files.js
.github/workflows/: ci.yml  fuzz.yml  replay-full.yml  replay.yml  rustdoc.yml
diffy/: all.html  enum.ConflictStyle.html  enum.Line.html  fn.apply.html  fn.apply_bytes.html  fn.create_patch.html  fn.create_patch_bytes.html  fn.merge.html  fn.merge_bytes.html  index.html  sidebar-items.js  struct.ApplyError.html  struct.DiffOptions.html  struct.Hunk.html  struct.HunkRange.html  struct.MergeOptions.html  struct.ParsePatchError.html  struct.Patch.html  struct.PatchFormatter.html
diffy/binary/: enum.BinaryBlockKind.html  enum.BinaryPatch.html  index.html  sidebar-items.js  struct.BinaryBlock.html  struct.BinaryData.html  struct.BinaryPatchParseError.html
diffy/patch_set/: enum.FileMode.html  enum.FileOperation.html  enum.PatchKind.html  index.html  sidebar-items.js  struct.FilePatch.html  struct.ParseOptions.html  struct.PatchSet.html  struct.PatchSetParseError.html
diffy/patch_set/error/: struct.PatchSetParseError.html
diffy/patch_set/parse/: struct.PatchSet.html
examples/: apply.rs  patch_formatter.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: patch_from_bytes.rs  patch_from_str.rs  patch_set_gitdiff.rs  patch_set_gitdiff_bytes.rs  patch_set_unidiff.rs  patch_set_unidiff_bytes.rs
search.desc/diffy/: diffy-desc-0-.js
search.index/: 04ae3b932689.js  16dd36c17a99.js  2c8df915e409.js  3bf2509bb539.js  3e01b4755837.js  3eb16e2f06a5.js  41a934afe379.js  4528d77ca89e.js  4e751e93a4df.js  6148530194e1.js  6b9db14f6987.js  6d4073fd98d5.js  7adf26870134.js  root.js
search.index/crateNames/: 807450f4d59f.js
search.index/desc/: 8b0863f085e1.js
search.index/entry/: 8c0fc55c558b.js
search.index/function/: d0ed8ca97548.js
search.index/generic_inverted_index/: 4a67c1c18fcc.js
search.index/name/: 72dd7cf91079.js
search.index/normalizedName/: 564a652b0e8d.js
search.index/path/: 0b27c3227140.js
search.index/type/: 98cfa3ba2a19.js
src/: apply.rs  diff.rs  lib.rs  patch.rs  range.rs  utils.rs
src/apply/: apply.rs.html
src/binary/: base85.rs  delta.rs  mod.rs
src/diff/: cleanup.rs  mod.rs  myers.rs  tests.rs
src/diffy/: apply.rs.html  lib.rs.html  range.rs.html  utils.rs.html
src/diffy/binary/: base85.rs.html  delta.rs.html  mod.rs.html
src/diffy/diff/: cleanup.rs.html  mod.rs.html  myers.rs.html
src/diffy/merge/: mod.rs.html
src/diffy/patch/: error.rs.html  format.rs.html  mod.rs.html  parse.rs.html  style.rs.html
src/diffy/patch_set/: error.rs.html  mod.rs.html  parse.rs.html
src/merge/: mod.rs  tests.rs
src/patch/: error.rs  format.rs  mod.rs  parse.rs  style.rs  tests.rs
src/patch_formatter/: patch_formatter.rs.html
src/patch_set/: error.rs  mod.rs  parse.rs  tests.rs
tests/: replay.rs
tests/compat/: common.rs  gnu_patch.rs  main.rs
tests/compat/git/: mod.rs
tests/compat/git/binary_and_text_mixed/in/: foo.patch
tests/compat/git/binary_delta/in/: foo.patch
tests/compat/git/binary_delta_zero_control/in/: foo.patch
tests/compat/git/binary_literal/in/: foo.patch
tests/compat/git/binary_literal_size_mismatch/in/: foo.patch
tests/compat/git/binary_literal_wrong_original/in/: foo.patch
tests/compat/git/binary_mixed_delta_literal/in/: foo.patch
tests/compat/git/fail_ambiguous_suffix_tie/in/: foo.patch
tests/compat/git/fail_both_devnull/in/: foo.patch
tests/compat/git/fail_prefix_no_slash/in/: foo.patch
tests/compat/git/format_patch_diff_in_message/in/: foo.patch
tests/compat/git/format_patch_mbox/in/: a.txt  b.txt  c.txt  foo.patch
tests/compat/git/format_patch_multiple_separators/in/: foo.patch
tests/compat/git/format_patch_preamble/in/: foo.patch
tests/compat/git/format_patch_signature/in/: foo.patch
tests/compat/git/junk_between_files/in/: bar.txt  foo.patch  foo.txt
tests/compat/git/junk_between_hunks/in/: foo.patch
tests/compat/git/nested_diff_signature/in/: mir-test.diff
tests/compat/git/non_utf8_hunk_content/in/: foo.patch
tests/compat/git/path_ambiguous_suffix/in/: foo.patch
tests/compat/git/path_containing_space_b/in/: foo.patch
tests/compat/git/path_custom_prefix/in/: foo.patch
tests/compat/git/path_mixed_quoted/in/: foo.patch
tests/compat/git/path_no_prefix/in/: foo.patch
tests/compat/git/path_quoted_escapes/in/: foo.patch
tests/compat/git/path_quoted_inner_quote/in/: foo.patch
tests/compat/gnu_patch/: mod.rs
tests/compat/gnu_patch/no_hunk/in/: foo.patch
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/cmp/: trait.Eq.js  trait.PartialEq.js
trait.impl/core/convert/: trait.From.js
trait.impl/core/default/: trait.Default.js
trait.impl/core/error/: trait.Error.js
trait.impl/core/fmt/: trait.Debug.js  trait.Display.js
trait.impl/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js  trait.UnsafeUnpin.js
trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
trait.impl/core/str/traits/: trait.FromStr.js
(+29 files in other folders)
