[package]
name = "diffy"
version = "0.4.2"
authors = ["Brandon Williams <bwilliams.eng@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Tools for finding and manipulating differences between files"
documentation = "https://docs.rs/diffy"
repository = "https://github.com/bmwill/diffy"
readme = "README.md"
keywords = ["diff", "patch", "merge"]
categories = ["text-processing"]
rust-version = "1.85.0"
edition = "2024"
exclude = ["/fuzz/"]

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg=docsrs -Zunstable-options --generate-link-to-definition" RUSTC_BOOTSTRAP=1 cargo doc --all-features --no-deps --open
all-features = true
rustdoc-args = [
    # Enable doc_cfg showing the required features.
    "--cfg=docsrs",

    # Generate links to definition in rustdoc source code pages
    # https://github.com/rust-lang/rust/pull/84176
    "-Zunstable-options", "--generate-link-to-definition"
]
cargo-args = [
    "-Zrustdoc-scrape-examples"
]

[features]
default = []
std = []
binary = ["dep:zlib-rs"]
color = ["dep:anstyle"]

[dependencies]
hashbrown = { version = "0.17.0", default-features = false, features = ["default-hasher"] }
anstyle = { version = "1.0.13", default-features = false, optional = true }
zlib-rs = { version = "0.6.3", optional = true, default-features = false, features = ["c-allocator"] }

[dev-dependencies]
rayon = "1.10.0"
snapbox = { version = "0.6.24", features = ["dir"] }

[[example]]
name = "patch_formatter"
required-features = ["std", "color"]
doc-scrape-examples = true

[[test]]
name = "compat"
required-features = ["binary"]

[[test]]
name = "replay"
required-features = ["binary"]
